<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/layout_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />


    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="top"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="02:33"
                android:theme="@style/text0Theme" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <include layout="@layout/progress" />
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pause" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:gravity="center">

            <ImageView
                android:id="@+id/heart_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart_1" />

            <ImageView
                android:id="@+id/heart_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/heart_1" />

            <ImageView
                android:id="@+id/heart_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:src="@drawable/heart_0" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:background="@color/bg_main"
        android:orientation="horizontal"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rect_one"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_paused"
            android:theme="@style/text3Theme" />

        <LinearLayout
            android:id="@+id/layout_time"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_bg"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="02:33"
                android:theme="@style/text0Theme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_progress"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="0%"
                    android:textSize="25dp"
                    android:theme="@style/text2Theme" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/distance"
                    android:textSize="35dp"
                    android:theme="@style/text2Theme" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="100%"
                    android:textSize="25dp"
                    android:theme="@style/text2Theme" />
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="60"
                    android:progressDrawable="@drawable/curved_progress_bar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.1"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="60"
                    android:progressDrawable="@drawable/curved_progress_bar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <LinearLayout
                android:id="@+id/layout_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/on"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sound" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/off"
                android:gravity="center">

                <ImageView
                    android:id="@+id/music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/music" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/continues_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/large_on"
            android:gravity="center">

            <TextView
                android:id="@+id/text_continues_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continues"
                android:textColor="@color/coffee"
                android:theme="@style/text0Theme" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:theme="@style/text0Theme" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>